# url-shortner

./: .gitignore  README.md  pyproject.toml  shortener.db  shortener.db-shm  shortener.db-wal
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routes/: urls.py
