[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = ["Sunil Hanamshetty <64653515+shetty456@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
tortoise-orm = "^0.24.2"
aiohttp = "^3.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
